@@ -36,7 +36,7 @@ sub setup_cupt {
 sub get_first_offer_for {
 	my ($cupt, $score) = @_;
 	my $score_option = defined $score ? "-o cupt::resolver::score::negative-version-factor=$score" : '';
-	return get_first_offer("$cupt install -t na --importance=5 a=2 -V -o debug::resolver=yes $score_option");
+	return get_first_offer("$cupt install -t na --importance=90 a=2 -V -o debug::resolver=yes $score_option");
 }
 
 sub test {
